--- a/src/Links.css
+++ b/src/Links.css
@@ -10,11 +10,15 @@
 	justify-content: center;
 	align-items: center;
 	grid-gap: .5em;
-	padding: 1em;
 	aspect-ratio: 1;
 }
 
 .App-Links i {
+	display: grid;
+	place-items: center;
+
+	height: 1em;
+	width: 1em;
 	font-size: 200%;
 }
 
