--- a/src/error-pages/main.css
+++ b/src/error-pages/main.css
@@ -1,5 +1,5 @@
 :root {
-	font-family: Consolas, monospace;
+  font-family: 'Courier New', monospace;
 	color: red;
 	font-weight: bold;
 	text-align: center;
