--- a/src/cv/main.css
+++ b/src/cv/main.css
@@ -1,43 +1,45 @@
-html, body {
-	line-height: 1.5;
-	text-wrap: balance;
-}
+@layer base {
+	html, body {
+		line-height: 1.5;
+		text-wrap: pretty;
+	}
 
-h1 {
-	font-size: 2rem;
-	font-weight: 600;
-}
+	h1 {
+		font-size: 2rem;
+		font-weight: 600;
+	}
 
-h2 {
-	font-size: 1.5rem;
-	font-weight: 600;
-}
+	h2 {
+		font-size: 1.5rem;
+		font-weight: 600;
+	}
 
-h3 {
-	font-size: 1.17rem;
-	font-weight: 600;
-}
+	h3 {
+		font-size: 1.17rem;
+		font-weight: 600;
+	}
 
-* {
-	min-height: 0;
-	min-width: 0;
-}
+	* {
+		min-height: 0;
+		min-width: 0;
+	}
 
-p,
-h1, h2, h3, h4, h5, h6 {
-	margin: .5em 0;
-}
+	p,
+	h1, h2, h3, h4, h5, h6 {
+		margin: .5em 0;
+	}
 
-h1, h2, h3, h4, h5, h6 {
-	margin-top: 0;
-	padding-top: 2rem;
-}
+	h1, h2, h3, h4, h5, h6 {
+		margin-top: 0;
+		padding-top: 2rem;
+	}
 
-a {
-	color: var(--color-primary-500);
-	text-decoration: underline;
-}
+	a {
+		color: var(--color-primary-500);
+		text-decoration: underline;
+	}
 
-h1, h2, h3, h4, h5, h6 {
-	break-after: avoid;
+	h1, h2, h3, h4, h5, h6 {
+		break-after: avoid;
+	}
 }
